--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>My Page</title>
     <style media="screen">
-h1 {color:blue; font-size:24px;}
+      * {color:purple;}
+      body {background-color: black;}
     </style>
   </head>
   <body>
