--- a/index.html
+++ b/index.html
@@ -4,16 +4,28 @@
     <meta charset="utf-8">
     <title>My Page</title>
     <style media="screen">
-      * {color:purple;}
       body {background-color: black;}
+      #content {border: 1px dashed red;}
+      #bodyBox {border: 1px solid red;}
+      .paraBox {border: 1px solid red;}
+      .paraBox {color: red;}
+      h1 {border: 1px dashed red;}
+      h1 {color: red;}
     </style>
   </head>
   <body>
+   <div id="content">
+    <div id="bodyBox">
     <h1>GET TO SCHOOL</h1>
-    <p>Best game in the world blah blah blah</p>
+    </div>
+    <div class="paraBox">
     <h2>ghhfghfghfdyrtfdsfdhfhtesgfhjgjjyusghfgjsytsrrtjyj</h2>
     <p>gfgfgdfhggfhhhtfghgdffjtshjtrtdfghgjjjsrgfjghjghjssgjhjdg</p>
+    </div>
+    <div class="paraBox">
     <h2>Get To Schoollllllll</h2>
     <p>Play my <a href="www/index.html">game</a> </p>
+   </div>
+    </div>
   </body>
 </html>
