--- a/about.html
+++ b/about.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>About</title>
-  </head>
-  <body>
-    I made this Page because I was forced at gun point :)
 
-  </body>
+<head>
+  <title>About</title>
+  <link rel="stylesheet" href="css/style.css">
+  <style media="screen">
+    #Home {
+      border: 5px solid #0000FF;
+      padding: 10px;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="content">
+    <div id="bodyBox">
+      About
+    </div>
+    <div class="paraBox">
+      I made this website because I was forced to :)
+    </div>
+    <div id="Home">
+      <a href="C:\Users\AWatson\OneDrive - York County School of Technology\Anthony Watson Computer Programming\year 2021 2022\site\index.html">Home</a>
+    </div>
+  </div>
+
+</body>
+
 </html>
