--- a/index.html
+++ b/index.html
@@ -1,31 +1,75 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>My Page</title>
-    <style media="screen">
-      body {background-color: black;}
-      #content {border: 1px dashed red;}
-      #bodyBox {border: 1px solid red;}
-      .paraBox {border: 1px solid red;}
-      .paraBox {color: red;}
-      h1 {border: 1px dashed red;}
-      h1 {color: red;}
-    </style>
-  </head>
-  <body>
-   <div id="content">
+
+<head>
+
+  <meta charset="utf-8">
+
+  <title>My Page</title>
+  <link rel="stylesheet" href="css/style.css">
+  <style media="screen">
+    #Home {
+      border: 5px solid #0000FF;
+      padding: 10px;
+
+    }
+
+    #About {
+      border: 5px solid #0000FF;
+      padding: 10px;
+    }
+
+    #Get2School {
+      border: 5px solid #0000FF;
+      padding: 10px;
+    }
+
+    .navBox {
+      display: flex;
+      justify-content: space-evenly;
+      flex-wrap: wrap;
+    }
+  </style>
+</head>
+
+<body>
+
+  <div id="content">
+
     <div id="bodyBox">
-    <h1>GET TO SCHOOL</h1>
+
+      <h1>GET TO SCHOOL</h1>
+
+    </div>
+    <div class="navBox">
+      <div id="Home">
+        <a href="">Home</a>
+      </div>
+      <div id="About">
+        <a href="C:\Users\AWatson\OneDrive - York County School of Technology\Anthony Watson Computer Programming\year 2021 2022\site\about.html">About</a>
+      </div>
+      <div id="Get2School">
+        <a href="C:\Users\AWatson\OneDrive - York County School of Technology\Anthony Watson Computer Programming\year 2021 2022\site\index.html">Get2School</a>
+      </div>
     </div>
     <div class="paraBox">
-    <h2>ghhfghfghfdyrtfdsfdhfhtesgfhjgjjyusghfgjsytsrrtjyj</h2>
-    <p>gfgfgdfhggfhhhtfghgdffjtshjtrtdfghgjjjsrgfjghjghjssgjhjdg</p>
+
+      <h2>ghhfghfghfdyrtfdsfdhfhtesgfhjgjjyusghfgjsytsrrtjyj</h2>
+
+      <p>gfgfgdfhggfhhhtfghgdffjtshjtrtdfghgjjjsrgfjghjghjssgjhjdg</p>
+
     </div>
+
     <div class="paraBox">
-    <h2>Get To Schoollllllll</h2>
-    <p>Play my <a href="www/index.html">game</a> </p>
-   </div>
+
+      <h2>Get To Schoollllllll</h2>
+
+      <p>Play my <a href="www/index.html">game</a> </p>
+
     </div>
-  </body>
+
+  </div>
+
+</body>
+
 </html>
