--- a/index.html
+++ b/index.html
@@ -2,74 +2,40 @@
 <html lang="en" dir="ltr">
 
 <head>
-
   <meta charset="utf-8">
-
-  <title>My Page</title>
+  <title>W.Anthony's Website </title>
   <link rel="stylesheet" href="css/style.css">
-  <style media="screen">
-    #Home {
-      border: 5px solid #0000FF;
-      padding: 10px;
+  <script src="js/function.js" charset="utf-8"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    }
-
-    #About {
-      border: 5px solid #0000FF;
-      padding: 10px;
-    }
-
-    #Get2School {
-      border: 5px solid #0000FF;
-      padding: 10px;
-    }
-
-    .navBox {
-      display: flex;
-      justify-content: space-evenly;
-      flex-wrap: wrap;
-    }
-  </style>
 </head>
 
 <body>
-
   <div id="content">
-
-    <div id="bodyBox">
-
-      <h1>GET TO SCHOOL</h1>
-
+    <div id="headerBox">
+      WebPage Title
     </div>
-    <div class="navBox">
-      <div id="Home">
-        <a href="">Home</a>
+    <div id="menuBox">
+        <div class="linkBox">
+          <a href="index.html">Home</a>
+        </div>
+        <div class="linkBox">
+        <a href="game.html">Game</a>  
+        </div>
+        <div class="linkBox">
+          <a href="about.html">About</a>
+        </div>
       </div>
-      <div id="About">
-        <a href="C:\Users\AWatson\OneDrive - York County School of Technology\Anthony Watson Computer Programming\year 2021 2022\site\about.html">About</a>
-      </div>
-      <div id="Get2School">
-        <a href="C:\Users\AWatson\OneDrive - York County School of Technology\Anthony Watson Computer Programming\year 2021 2022\site\index.html">Get2School</a>
-      </div>
+    <div class="blogBox">
+      <h1>Hello, Welcome to My Page. This Webpage is made to be able to prove I am able to make a great website and to be able to make it look very nice for Mr. Smith. It has some of HTML and alot of CSS, and soon more Java Script. There is many CSS that moves the text, shows it in a different color, and much more.</h1>
     </div>
-    <div class="paraBox">
-
-      <h2>ghhfghfghfdyrtfdsfdhfhtesgfhjgjjyusghfgjsytsrrtjyj</h2>
-
-      <p>gfgfgdfhggfhhhtfghgdffjtshjtrtdfghgjjjsrgfjghjghjssgjhjdg</p>
-
+    <div class="blogBox">
+      <img src="img/Programming Image.jpg" alt="Prgramming Image">
     </div>
-
-    <div class="paraBox">
-
-      <h2>Get To Schoollllllll</h2>
-
-      <p>Play my <a href="www/index.html">game</a> </p>
-
+    <div class="blogBox">
+      <p>You can click on the Game Text that is underlined colored White to be able to play Get To School, a nice game that is about getting to school fighting off many evil cretures and other bad things that walk around the world. You can even be able to collect POGS to be able to get special weapons that make you go much, much faster in battle. Fight off the evil to be able to get to class in time. Or you can click on the About text that is also underlined and also Whited. That will bring you to another HTML page that talks about Anthony Watson, aka the creator, aka me, and you would be able to see what I am, and what am I doing in life. It also uses the same CSS and the same Java Script as this HTML website. So go on and look around the pages.</p>
     </div>
-
   </div>
-
 </body>
 
 </html>
