--- a/about.html
+++ b/about.html
@@ -1,30 +1,22 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-  <title>About</title>
-  <link rel="stylesheet" href="css/style.css">
-  <style media="screen">
-    #Home {
-      border: 5px solid #0000FF;
-      padding: 10px;
-    }
-  </style>
-</head>
-
-<body>
-  <div id="content">
-    <div id="bodyBox">
-      About
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>W.Anthony About Page</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/function.js" charset="utf-8"></script>
+  </head>
+  <body>
+    <div class="content">
+      <div id="headerBox">
+        About Anthony Watson
+        <div id="backBox">
+        <a href="index.html">Home</a>
+        </div>
+      </div>
+      <div class="blogBox">
+        <img src="img/images.jfif" alt="York Tech">
+        <p>This is me, a Freshman in York Tech. My name is Anthony M. Watson and I'm in I.T. . Throughout the first year here I was able to make knowledge about the field and learn about the Software of computers and the Hardware of them. Then I was able to learn the Networking/ Cyber security of them, and of how to be able to Program and be able to make websites which I have in this HTML webpage. I also was able to make Vitrual Machines, aka Software Computers that can do everything a normal computer do, but better. I was even able to learn and improve my own PC I have at my house and learn about the parts of a computer from Hardware class. And then, finally I was able to improve my security for my router and Computer at home, and my the internet connection strogner at my house from learning all about it from Networking/Cybersecurity class. I love being able to Program and I hope in the Future I would be able to learn more about Java script and Python from Junior and Senior years. I can't wait for the Future of my Life in this Amazing School, and I can't wait to learn more about Computer Programming.</p>
     </div>
-    <div class="paraBox">
-      I made this website because I was forced to :)
-    </div>
-    <div id="Home">
-      <a href="C:\Users\AWatson\OneDrive - York County School of Technology\Anthony Watson Computer Programming\year 2021 2022\site\index.html">Home</a>
-    </div>
-  </div>
-
-</body>
-
+  </body>
 </html>
