--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="index.html">Home</a>
         </div>
         <div class="linkBox">
-        <a href="game.html">Game</a>  
+        <a href="www/game.html">Game</a>
         </div>
         <div class="linkBox">
           <a href="about.html">About</a>
